@@ -23,7 +23,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: mac.c,v 1.1 2001/02/11 12:59:24 markus Exp $");
+RCSID("$OpenBSD: mac.c,v 1.2 2001/04/05 10:42:51 markus Exp $");
 
 #include <openssl/hmac.h>
 
@@ -45,7 +45,7 @@ struct {
 	{ "hmac-md5-96",		EVP_md5, 96 },
 	{ "hmac-ripemd160",		EVP_ripemd160, 0 },
 	{ "hmac-ripemd160@openssh.com",	EVP_ripemd160, 0 },
-        { NULL,				NULL, 0 }
+	{ NULL,				NULL, 0 }
 };
 
 int
